--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==2.2.0
 filelock==3.15.4
 gunicorn==23.0.0
 jsonpointer==2.1
+psycopg2-binary==2.9.9
 setuptools==72.1.0
 typing_extensions==4.12.2
 virtualenv==20.26.3
